add semantic elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body style="margin-bottom: 100px;">
-    <div class="header">
+    <header class="header">
       <div class="left-section">
         <img
           class="hamburger-menu"
@@ -81,8 +81,8 @@
           alt=""
         />
       </div>
-    </div>
-    <div class="sidebar">
+    </header>
+    <nav class="sidebar">
       <div class="sidebar-link">
         <img src="images/side-bar-icons/home.svg" alt="" />
         <div>Home</div>
@@ -107,8 +107,9 @@
         <img src="images/side-bar-icons/youtube-music.svg" alt="" />
         <div>Library</div>
       </div>
-    </div>
-    <div class="video-grid">
+    </nav>
+    <main>
+    <section class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
           <a
@@ -424,6 +425,111 @@
           </div>
         </div>
       </div>
-    </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+          <img class="thumbnail" src="/images/thumbnail-11.webp" />
+          </a>
+          <div class="video-time">4:10</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              class="profile-picture"
+              src="/images/channnel-profile-pics/channel-11.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="video-info">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+              <p class="video-title">
+                Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+              </p>
+            </a>
+            <p class="video-author">Destination Tips</p>
+            <p class="video-stats">3M views &#183; 1 years ago</p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+          <img class="thumbnail" src="/images/thumbnail-11.webp" />
+          </a>
+          <div class="video-time">4:10</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              class="profile-picture"
+              src="/images/channnel-profile-pics/channel-11.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="video-info">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+              <p class="video-title">
+                Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+              </p>
+            </a>
+            <p class="video-author">Destination Tips</p>
+            <p class="video-stats">3M views &#183; 1 years ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+          <img class="thumbnail" src="/images/thumbnail-11.webp" />
+          </a>
+          <div class="video-time">4:10</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              class="profile-picture"
+              src="/images/channnel-profile-pics/channel-11.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="video-info">
+            <a
+              href="https://youtu.be/0nZuYyXET3s?si=NxtvuMzh_phnHcuL"
+              target="_blank"
+              class="video-title-link"
+            >
+              <p class="video-title">
+                Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+              </p>
+            </a>
+            <p class="video-author">Destination Tips</p>
+            <p class="video-stats">3M views &#183; 1 years ago</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
   </body>
 </html>
